icon align fix

--- a/src/app/pages/competences/competences.component.scss
+++ b/src/app/pages/competences/competences.component.scss
@@ -281,6 +281,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    &[class*='devicon'] {
+      line-height: 1;
+    }
   }
 
   &__body {
